--- a/index.html
+++ b/index.html
@@ -41,23 +41,23 @@
     <section class="home" id="home">
         <div class="social-bar">
             <a href="#" target="_blank" class="">
-                <img src="images/gh.png" alt="">
+                <img src="../images/gh.png" alt="">
             </a>
             <a href="#" target="_blank" class="">
-                <img src="images/linkedin.png">
+                <img src="../images/linkedin.png">
             </a>
             <a href="#" target="_blank" class="">
-                <img src="images/spotify.png" alt="">
+                <img src="../images/spotify.png" alt="">
             </a>
             <a href="#" target="_blank" class="">
-                <img src="images/ig.png" alt="">
+                <img src="../images/ig.png" alt="">
             </a>
             <a href="#" target="_blank" class="">
-                <img src="images/wsp.png" alt="">
+                <img src="../images/wsp.png" alt="">
             </a>
         </div>
         <div class="home-content">
-            <h1 class="home-title blur-in" data-section="home" data-value="hi">Hola, soy Leonel Cuenca</h1>
+            <h1 class="home-title blur-in" data-section="home" data-value="hi">Leonel Cuenca</h1>
             <h3 class="home-multiple blur-in"><span class="multiple-text"></span></h3>
         </div>
         <a class="link-test" href="#about">
@@ -91,43 +91,43 @@
                 <h3 class="skills-title">Mis habilidades</h3>
                 <div class="skills">
                     <div class="skills-skill">
-                        <img class="skill-img" src="images/html.png" alt="">
+                        <img class="skill-img" src="../images/html.png" alt="">
                         HTML
                     </div>
                     <div class="skills-skill">
-                        <img class="skill-img" src="images/css.png" alt="">
+                        <img class="skill-img" src="../images/css.png" alt="">
                         CSS
                     </div>
                     <div class="skills-skill">
-                        <img class="skill-img" src="images/js.png" alt="">
+                        <img class="skill-img" src="../images/js.png" alt="">
                         JavaScript
                     </div>
                     <div class="skills-skill">
-                        <img class="skill-img" src="images/react.png" alt="">
+                        <img class="skill-img" src="../images/react.png" alt="">
                         React
                     </div>
                     <div class="skills-skill">
-                        <img class="skill-img" src="images/git.png" alt="">
+                        <img class="skill-img" src="../images/git.png" alt="">
                         GIT
                     </div>
                     <div class="skills-skill">
-                        <img class="skill-img" src="images/github.png" alt="">
+                        <img class="skill-img" src="../images/github.png" alt="">
                         GitHub
                     </div>
                     <div class="skills-skill">
-                        <img class="skill-img" src="images/cel.png" alt="">
+                        <img class="skill-img" src="../images/cel.png" alt="">
                         Resposive Design
                     </div>
                     <div class="skills-skill">
-                        <img class="skill-img" src="images/seo.png" alt="">
+                        <img class="skill-img" src="../images/seo.png" alt="">
                         SEO
                     </div>
                     <div class="skills-skill">
-                        <img class="skill-img" src="images/python.png" alt="">
+                        <img class="skill-img" src="../images/python.png" alt="">
                         Python
                     </div>
                     <div class="skills-skill">
-                        <img class="skill-img" src="images/csharp.png" alt="">
+                        <img class="skill-img" src="../images/csharp.png" alt="">
                         C#
                     </div>
                 </div>
