--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Leonel Cuenca | Portfolio</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/components.css" />
     <link rel="stylesheet" href="css/responsive.css" />
@@ -38,24 +39,28 @@
     </header>
 
     <!-- Home Section Design -->
+    
     <section class="home" id="home">
         <div class="social-bar">
             <a href="#" target="_blank" class="">
-                <img src="../images/gh.png" alt="">
+                <img src="/images/gh.png" alt="">
             </a>
             <a href="#" target="_blank" class="">
-                <img src="../images/linkedin.png">
+                <img src="/images/linkedin.png">
             </a>
             <a href="#" target="_blank" class="">
-                <img src="../images/spotify.png" alt="">
+                <img src="/images/spotify.png" alt="">
             </a>
             <a href="#" target="_blank" class="">
-                <img src="../images/ig.png" alt="">
+                <img src="/images/ig.png" alt="">
             </a>
             <a href="#" target="_blank" class="">
-                <img src="../images/wsp.png" alt="">
+                <img src="/images/wsp.png" alt="">
             </a>
         </div>
+
+        <div class="img-container"></div>
+
         <div class="home-content">
             <h1 class="home-title blur-in" data-section="home" data-value="hi">Leonel Cuenca</h1>
             <h3 class="home-multiple blur-in"><span class="multiple-text"></span></h3>
@@ -68,7 +73,7 @@
     <!-- About Section Design -->
 
     <section class="about" id="about">
-        <div class="title-container">
+        <div class="about-title">
             <h2 class="heading h-translate" data-section="about" data-value="aboutTitle">Sobre </h2><span
                 data-section="about" data-value="me">Mí</span>
         </div>
@@ -77,15 +82,10 @@
             hago, y las habilidades que actualmente manejo en terminos de programación y tecnología</p>
         <div class="about-container">
             <div class="about-text-container">
-                <h3 class="about-title">Un poco de mi historia</h3>
-                <p class="about-text">Soy un desarrollador web enfocado en Frontend. Me dedico a crear y optimizar la
-                    parte visual e interactiva de sitios web, buscando siempre diseños limpios, funcionales y con una
-                    buena experiencia de usuario.</p>
-                <p class="about-text">Disfruto transformar ideas en proyectos reales y ver cómo cada detalle hace que
-                    una web se sienta más viva. Podés ver algunos de mis trabajos en la sección Proyectos.</p>
-                <p class="about-text">Actualmente estoy abierto a nuevas oportunidades donde pueda seguir aprendiendo,
-                    creciendo y aportando valor con mi trabajo. Si tenés una propuesta interesante, no dudes en
-                    contactarme.</p>
+                <h3 class="about-text-title">Un poco de mi historia</h3>
+                <p class="about-text">Soy Leonel, desarrollador frontend y docente de programación. Después de varios años trabajando en áreas administrativas, en 2020 descubrí mi verdadera vocación: la tecnología y el desarrollo de software. Desde entonces me formé de manera continua y hoy me especializo en desarrollo web, programación estructurada y programación orientada a objetos.</p>
+                <p class="about-text">Actualmente trabajo como profesor en un colegio secundario, donde acompaño a jóvenes en sus primeros pasos dentro del mundo de la programación. Disfruto combinar mi experiencia técnica con una mirada pedagógica, buscando siempre transmitir conceptos de forma clara y accesible.</p>
+                <p class="about-text">Como desarrollador frontend, mi objetivo es crear sitios modernos, responsivos y funcionales, pensados para brindar una experiencia intuitiva y profesional. Busco acercar mis servicios a personas, emprendimientos y marcas que quieran mejorar su presencia digital con soluciones sólidas, prolijas y adaptadas a sus necesidades.</p>
             </div>
             <div class="skills-container">
                 <h3 class="skills-title">Mis habilidades</h3>
@@ -258,10 +258,7 @@
                 <span data-section="portfolio" data-value="projects">Proyectos</span>
             </div>
             <span class="linea"></span>
-            <p class="portfolio-intro">En esta sección vas a encontrar una selección de mis proyectos más destacados.
-                Cada uno refleja mi forma de trabajar: atención al detalle, diseño funcional y enfoque en la experiencia
-                del usuario. Me gusta combinar creatividad y técnica para convertir ideas en soluciones visuales y
-                digitales que realmente funcionan.</p>
+            <p class="portfolio-intro">En esta sección vas a encontrar una selección de mis proyectos más destacados. Cada uno refleja mi forma de trabajar: atención al detalle, diseño funcional y enfoque en la experiencia del usuario. Me gusta combinar creatividad y técnica para convertir ideas en soluciones visuales y digitales que realmente funcionan.</p>
             <div class="project-container">
                 <div class="project-img-cont">
                     <img src="images/note.png" alt="" class="note-frame">
@@ -276,10 +273,7 @@
                 </div>
                 <div class="project-info-container">
                     <h2 class="info-title">Mi portfolio</h2>
-                    <p class="info-description">Mi portfolio es una colección de proyectos web desarrollados con HTML,
-                        CSS y JavaScript, donde muestro mi habilidad para crear sitios web atractivos y funcionales.
-                        Cada proyecto exhibe un enfoque único y creativo, demostrando mi capacidad para diseñar y
-                        programar experiencias digitales cautivadoras.</p>
+                    <p class="info-description">Mi portfolio es una colección de proyectos web desarrollados con HTML, CSS y JavaScript, donde muestro mi habilidad para crear sitios web atractivos y funcionales. Cada proyecto exhibe un enfoque único y creativo, demostrando mi capacidad para diseñar y programar experiencias digitales cautivadoras.</p>
                     <div class="project-links">
                         <a href="#home"><img class="hvr-bounce-in" src="/images/github.png" alt=""></a>
                         <a href="#home"><img class="hvr-bounce-in" src="/images/link.png" alt=""></a>
