--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
     <section class="portfolio" id="portfolio">
         <div class="portfolio-container">
             <div class="title-container">
-                <h2 class="heading" data-section="portfolio" data-value="some">Mis</h2>
+                <h2 class="portfolio-title" data-section="portfolio" data-value="some">Mis</h2>
                 <span data-section="portfolio" data-value="projects">Proyectos</span>
             </div>
             <span class="linea"></span>
@@ -439,7 +439,7 @@
                     </div>
                 </div>
                 <div class="project-info-container">
-                    <h2 class="info-title"></h2>
+                    <h2 class="info-title">Orientacion Informatica</h2>
                     <p class="info-description">Página desarrollada para el colegio donde actualmente trabajo como
                         docente, dando clases de programación web, estructurada y orientada a objetos.</p>
                     <div class="project-links">
@@ -474,10 +474,10 @@
 
     <section class="contact" id="contact">
         <div class="title-contact-container">
-            <h2 class="heading-contact" id="cont-es">Conta<span>ctame</span></h2>
-            <h2 class="heading-contact hidden" id="cont-en">Contact <span>Me</span></h2>
+            <h2 class="heading-contact" id="cont-es">¿Tenés un proyecto en mente?</h2>
         </div>
-
+        <p class="contact-intro">Completá el formulario y te respondo a la brevedad. Cuantos más detalles puedas dar, mejor voy a poder ayudarte y pasarte una propuesta acorde a tus necesidades. También podés escribirme directamente por WhatsApp si preferís un contacto más rápido.</p>
+        <!-- <div class="linea"></div> -->
         <form action="https://api.web3forms.com/submit" method="POST">
             <div class="input-box">
                 <input type="hidden" name="access_key" value="27348487-0931-4ea6-9ada-8ad2b07f5651">
