--- a/index.html
+++ b/index.html
@@ -38,6 +38,37 @@
         </nav>
     </header>
 
+    <!-- WhatsApp Me -->
+    <!-- <div id="whatsapp-button" class="whatsapp-button">
+        <a href="https://wa.me/+5491134417767" target="_blank">
+            <img src="./images/wsp-color.png" alt="WhatsApp">
+        </a>
+    </div>
+
+    <section class="modal">
+        <div class="modal-container">
+            <div class="receta-img-container">
+                <img src="" alt="" class="modal-img">
+            </div>
+            <h1 class="receta-title"></h1>
+            <div class="ingredientes-container-receta">
+                <h4>Ingredientes:</h4>
+                <ul class="lista-ingredientes">
+                    <li></li>
+                </ul>
+            </div>
+            <div class="preparacion-container">
+                <h4>Preparacion:</h4>
+                <ul class="lista-pasos">
+                    <li></li>
+                </ul>
+            </div>
+
+            <a href="" class="modal-close">Volver atras</a>
+            
+        </div>
+    </section> -->
+
     <!-- Home Section Design -->
     
     <section class="home" id="home">
@@ -68,6 +99,15 @@
         <a class="link-test" href="#about">
             <div class="scroll-down"></div>
         </a>
+
+        <!-- Go Top Button -->
+
+        <div class="go-top-container">
+            <div class="go-top-button">
+                <i class='bx bx-chevron-up'></i>
+            </div>
+        </div>
+
     </section>
 
     <!-- About Section Design -->
@@ -187,7 +227,7 @@
                 </div>
                 <div class="back">
                     <h2 class="back-title">Servicios Complementarios</h2>
-                    <h2 class="back-title">Mantenimiento Web</h2>
+                    <!-- <h2 class="back-title">Mantenimiento Web</h2> -->
                     <span class="card-linea"></span>
                     <p class="back-info">Ofrezco mantenimiento, actualización de contenido, rediseño de sitios antiguos, optimización de velocidad, integración con formularios, y conexión con herramientas como Google Analytics o redes sociales.</p>
                     <p class="back-info">Pensado para quienes ya tienen un sitio pero quieren mejorarlo o mantenerlo actualizado sin preocuparse por lo técnico.</p>
@@ -495,7 +535,7 @@
     </section>
 
     <!-- Footer Design -->
-    <footer class="footer">
+    <!-- <footer class="footer">
         <div class="footer-text">
             <p>Copyright &copy; 2024 portfolio Leonel Cuenca</p>
         </div>
@@ -508,7 +548,7 @@
         <div class="footer-iconTop">
             <a href="#home"><i class='bx bx-up-arrow-alt'></i></a>
         </div>
-    </footer>
+    </footer> -->
 
     <!-- Scroll Reveal -->
     <script src="https://unpkg.com/scrollreveal"></script>
