mas ajustes mobile

--- a/index.html
+++ b/index.html
@@ -38,37 +38,6 @@
         </nav>
     </header>
 
-    <!-- WhatsApp Me -->
-    <!-- <div id="whatsapp-button" class="whatsapp-button">
-        <a href="https://wa.me/+5491134417767" target="_blank">
-            <img src="./images/wsp-color.png" alt="WhatsApp">
-        </a>
-    </div>
-
-    <section class="modal">
-        <div class="modal-container">
-            <div class="receta-img-container">
-                <img src="" alt="" class="modal-img">
-            </div>
-            <h1 class="receta-title"></h1>
-            <div class="ingredientes-container-receta">
-                <h4>Ingredientes:</h4>
-                <ul class="lista-ingredientes">
-                    <li></li>
-                </ul>
-            </div>
-            <div class="preparacion-container">
-                <h4>Preparacion:</h4>
-                <ul class="lista-pasos">
-                    <li></li>
-                </ul>
-            </div>
-
-            <a href="" class="modal-close">Volver atras</a>
-            
-        </div>
-    </section> -->
-
     <!-- Home Section Design -->
     
     <section class="home" id="home">
@@ -185,7 +154,7 @@
         <div class="card-container">
             <div class="flip flip-vertical">
                 <div class="front">
-                    <h1 class="text-shadow">Landing Page</h1>
+                    <h1 class="front-title">Landing Page</h1>
                 </div>
                 <div class="back">
                     <h2 class="back-title">Landing Page</h2>
@@ -207,7 +176,7 @@
             </div>
             <div class="flip flip-vertical">
                 <div class="front">
-                    <h1 class="text-shadow">Sitio Institucional</h1>
+                    <h1 class="front-title">Sitio Institucional</h1>
                 </div>
                 <div class="back">
                     <h2 class="back-title">Sitio Institucional</h2>
@@ -223,7 +192,7 @@
             </div>
             <div class="flip flip-vertical">
                 <div class="front">
-                    <h1 class="text-shadow">Servicios Complementarios</h1>
+                    <h1 class="front-title">Servicios Complementarios</h1>
                 </div>
                 <div class="back">
                     <h2 class="back-title">Servicios Complementarios</h2>
