--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                     <p class="back-info">💰 Desde USD 250</p>
                     <p class="back-info">¿Querés mejorar la presencia digital de tu marca?</p>
                     <p class="back-info">Escribime y te asesoro sin compromiso</p>
-                    <a href="https://wa.me/541134417767?text=Funciona esto?" target="_blank" class="btn card-button">Hablemos por WhatsApp</a>
+                    <a href="https://wa.me/541134417767?text=" target="_blank" class="btn card-button">Hablemos por WhatsApp</a>
                 </div>
             </div>
             <div class="flip flip-vertical">
@@ -203,7 +203,7 @@
                     <p class="back-info">💰 Desde USD 40 por servicio puntual</p>
                     <p class="back-info">¿Queres mejorar tu web?</p>
                     <p class="back-info">Contame qué necesitás y te asesoro sin compromiso.</p>
-                    <a href="https://wa.me/541134417767?text=Funciona esto?" target="_blank" class="btn card-button">Hablemos por WhatsApp</a>
+                    <a href="https://wa.me/541134417767?text=" target="_blank" class="btn card-button">Hablemos por WhatsApp</a>
                 </div>
             </div>
         </div>
@@ -371,22 +371,18 @@
                         <a href="#home"><img class="hvr-bounce-in" src="./images/link.png" alt=""></a>
                     </div>
                     <div class="project-techs">
-
                         <div class="skills-skill skill-project">
                             <img class="skill-img" src="./images/html.png" alt="">
                             HTML
                         </div>
-
                         <div class="skills-skill skill-project">
                             <img class="skill-img" src="./images/css.png" alt="">
                             CSS
                         </div>
-
                         <div class="skills-skill skill-project">
                             <img class="skill-img" src="./images/js.png" alt="">
                             JavaScript
                         </div>
-
                     </div>
                 </div>
             </div>
@@ -486,7 +482,7 @@
             <h2 class="heading-contact" id="cont-es">¿Tenés un proyecto en mente?</h2>
         </div>
         <span class="linea"></span>
-        <p class="contact-intro">Completá el formulario y te respondo a la brevedad. Cuantos más detalles puedas dar, mejor voy a poder ayudarte y pasarte una propuesta acorde a tus necesidades. También podés escribirme directamente por WhatsApp si preferís un contacto más rápido.</p>
+        <p class="contact-intro">Completá el formulario y te respondo a la brevedad. Cuantos más detalles puedas dar, mejor voy a poder ayudarte y pasarte una propuesta acorde a tus necesidades. También podés escribirme directamente por <span><a href="https://wa.me/541134417767?text=Funciona esto?" target="_blank">WhatsApp</a></span> si preferís un contacto más rápido.</p>
         <!-- <div class="linea"></div> -->
         <form action="https://api.web3forms.com/submit" method="POST">
             <div class="input-box">
@@ -495,29 +491,37 @@
                 <input type="hidden" name="subject" value="Nuevo Mensaje del Portfolio">
                 <input type="text" placeholder="Nombre" name="nombre" id="name" required autocomplete="off">
                 <input type="email" placeholder="Email" name="mail" id="email" required autocomplete="off">
-                <textarea cols="30" rows="10" placeholder="Tu mensaje ..." name="message" id="message"
-                    required></textarea>
+                <textarea cols="30" rows="10" placeholder="Tu mensaje ..." name="message" id="message" required></textarea>
             </div>
-
             <input type="submit" value="Enviar Mensaje" class="input-btn">
         </form>
     </section>
 
     <!-- Footer Design -->
-    <!-- <footer class="footer">
+
+    <footer class="footer">
         <div class="footer-text">
-            <p>Copyright &copy; 2024 portfolio Leonel Cuenca</p>
+            <p>Desarrollado y programado en Visual Studio Code por mí.</p>
+            <p>&copy; Leonel Cuenca 👨🏻‍💻⚡️</p>
         </div>
         <div class="menu-footer">
-            <a href="#home" class="footer-menu-item">Inicio</a>
-            <a href="#about" class="footer-menu-item">Sobre mi</a>
-            <a href="#portfolio" class="footer-menu-item">Portfolio</a>
-            <a href="#contact" class="footer-menu-item">Contacto</a>
+            <a href="#" target="_blank" class="">
+                <img src="./images/gh.png" alt="">
+            </a>
+            <a href="#" target="_blank" class="">
+                <img src="./images/linkedin.png">
+            </a>
+            <a href="#" target="_blank" class="">
+                <img src="./images/spotify.png" alt="">
+            </a>
+            <a href="#" target="_blank" class="">
+                <img src="./images/ig.png" alt="">
+            </a>
+            <a href="#" target="_blank" class="">
+                <img src="./images/wsp.png" alt="">
+            </a>
         </div>
-        <div class="footer-iconTop">
-            <a href="#home"><i class='bx bx-up-arrow-alt'></i></a>
-        </div>
-    </footer> -->
+    </footer>
 
     <!-- Scroll Reveal -->
     <script src="https://unpkg.com/scrollreveal"></script>
