--- a/index.html
+++ b/index.html
@@ -2,16 +2,27 @@
 <html lang="es">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Leonel Cuenca | Portfolio</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Leonel Cuenca | Front-end Dev</title>
+
+    <!-- Preconnect primero -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
+    <!-- Preload de imagen crítica -->
+    <link rel="preload" href="./images/background2.png" as="image" />
+
+    <!-- Fuentes locales (si las usás con @font-face) -->
+    <link rel="preload" href="fonts/Elms Sans.woff2" as="font" type="font/woff2" crossorigin />
+    <link rel="preload" href="fonts/Roboto Slab.woff2" as="font" type="font/woff2" crossorigin />
+
+    <!-- Boxicons local -->
+    <link rel="stylesheet" href="./css/boxicons.min.css" />
+
+    <!-- TU CSS general (idealmente minificado y unificado) -->
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/components.css" />
-    <link rel="stylesheet" href="css/responsive.css" />
-    <link href="lightbox/css/lightbox.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -211,46 +222,36 @@
                 <div class="accordion-item">
                     <div class="accordion-header">1. ⚙️ Modalidad de trabajo<span>+</span></div>
                     <div class="accordion-content">
-                        <p>Cada proyecto se realiza de forma personalizada, adaptado a las necesidades y objetivos del
-                            cliente. Antes de comenzar, se define el alcance, el contenido y los plazos de entrega.</p>
+                        <p>Cada proyecto se realiza de forma personalizada, adaptado a las necesidades y objetivos del cliente. Antes de comenzar, se define el alcance, el contenido y los plazos de entrega.</p>
                     </div>
                 </div>
                 <div class="accordion-item">
                     <div class="accordion-header">2. 💳 Formas de pago <span>+</span></div>
                     <div class="accordion-content">
-                        <p>El trabajo se realiza bajo la modalidad 50% por adelantado y 50% al finalizar el proyecto,
-                            antes de la publicación o entrega de los archivos finales.</p>
-                        <p>Los pagos pueden realizarse en pesos argentinos (ARS) al tipo de cambio del día, o en dólares
-                            (USD) mediante los medios acordados (Transferencia / Mercado Pago)</p>
+                        <p>El trabajo se realiza bajo la modalidad 50% por adelantado y 50% al finalizar el proyecto, antes de la publicación o entrega de los archivos finales.</p>
+                        <p>Los pagos pueden realizarse en pesos argentinos (ARS) al tipo de cambio del día, o en dólares (USD) mediante los medios acordados (Transferencia / Mercado Pago)</p>
                     </div>
                 </div>
                 <div class="accordion-item">
                     <div class="accordion-header">3. 🛠️ Revisión y ajustes<span>+</span></div>
                     <div class="accordion-content">
-                        <p>Se incluyen una o dos rondas de ajustes menores (según el tipo de servicio) una vez
-                            presentado el diseño o la versión funcional del sitio. Cambios fuera del alcance inicial
-                            pueden presupuestarse aparte.</p>
+                        <p>Se incluyen una o dos rondas de ajustes menores (según el tipo de servicio) una vez presentado el diseño o la versión funcional del sitio. Cambios fuera del alcance inicial pueden presupuestarse aparte.</p>
                     </div>
                 </div>
                 <div class="accordion-item">
                     <div class="accordion-header">4. 🌐 Hosting y dominio<span>+</span></div>
                     <div class="accordion-content">
-                        <p>El servicio de hosting y dominio puede gestionarse a través del desarrollador o directamente
-                            por el cliente. Si el hosting lo provee el desarrollador, se cobrará el costo
-                            correspondiente al plan elegido.</p>
+                        <p>El servicio de hosting y dominio puede gestionarse a través del desarrollador o directamente por el cliente. Si el hosting lo provee el desarrollador, se cobrará el costo correspondiente al plan elegido.</p>
                     </div>
                 </div>
                 <div class="accordion-item">
                     <div class="accordion-header">5. 🚀 Entrega final<span>+</span></div>
                     <div class="accordion-content">
-                        <p>La entrega final se realiza una vez abonado el total del proyecto. En caso de hosting propio
-                            del cliente, se entregan los archivos listos para subir. Si se contrata hosting
-                            administrado, el sitio se publica directamente.</p>
+                        <p>La entrega final se realiza una vez abonado el total del proyecto. En caso de hosting propio del cliente, se entregan los archivos listos para subir. Si se contrata hosting administrado, el sitio se publica directamente.</p>
                     </div>
                 </div>
             </div>
         </div>
-
     </section>
 
     <!-- Portfolio Section Design -->
@@ -510,16 +511,13 @@
     </footer>
 
     <!-- Scroll Reveal -->
-    <script src="https://unpkg.com/scrollreveal"></script>
+     <script src="./js/scrollreveal.min.js"></script>
 
     <!-- Typed js -->
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
 
     <!-- Custom js -->
     <script src="js/script.js"></script>
-
-    <!-- LightBox -->
-    <script src="lightbox/js/lightbox-plus-jquery.min.js"></script>
 
 </body>
 
