correcion url fuentes

--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
     <header class="header">
         <i class="bx bx-menu" id="menu-icon"></i>
         <nav class="navbar">
-            <a href="#home" class="active" data-section="navbar" data-value="home">Inicio</a>
-            <a href="#about" data-section="navbar" data-value="aboutNav">Sobre mi</a>
-            <a href="#services" data-section="navbar" data-value="services">Servicios</a>
-            <a href="#portfolio">Portfolio</a>
-            <a href="#contact" data-section="navbar" data-value="contact">Contacto</a>
+            <a href="#home" class="active" data-section="navbar" data-value="home" aria-label="Inicio">Inicio</a>
+            <a href="#about" data-section="navbar" data-value="aboutNav" aria-label="Sobre mi">Sobre mi</a>
+            <a href="#services" data-section="navbar" data-value="services" aria-label="Servicios">Servicios</a>
+            <a href="#portfolio" aria-label="Portfolio">Portfolio</a>
+            <a href="#contact" data-section="navbar" data-value="contact" aria-label="Contacto">Contacto</a>
             <div class="flags" id="flags">
                 <div class="flags-container" data-language="es">
-                    <img src="./images/spain.png" alt="" id="spanish">
+                    <img src="./images/spain.png" alt="Español" id="spanish">
                 </div>
                 <div class="flags-container" data-language="en">
                     <img src="./images/usa.png" alt="" class="gray" id="english">
