--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <img src="./images/spain.png" alt="Español" id="spanish">
                 </div>
                 <div class="flags-container" data-language="en">
-                    <img src="./images/usa.png" alt="" class="gray" id="english">
+                    <img src="./images/usa.png" alt="Ingles" class="gray" id="english">
                 </div>
             </div>
         </nav>
