--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Leonel Cuenca | Front-end Dev</title>
+    <title>Leonel Cuenca | Frontend Dev</title>
 
     <!-- Preload de imagen crítica -->
     <link rel="preload" href="./images/background2.png" as="image" />
+
+    <link rel="icon" type="image/png" href="/images/favico.png">
 
     <!-- Boxicons local -->
     <link rel="stylesheet" href="./css/boxicons.min.css" />
@@ -85,18 +87,18 @@
     <!-- About Section Design -->
 
     <section class="about" id="about">
-        <h2 class="about-title" data-section="about" data-value="aboutTitle">Sobre mi</h2>
+        <h2 class="about-title" data-section="about" data-value="title">Sobre mi</h2>
         <span class="linea"></span>
-        <p class="about-intro" data-section="about" data-value="p1">Aca vas a encontrar mas información sobre mí, lo que hago, y las habilidades que actualmente manejo en terminos de programación y tecnología</p>
+        <p class="about-intro" data-section="about" data-value="intro">Aca vas a encontrar mas información sobre mí, lo que hago, y las habilidades que actualmente manejo en terminos de programación y tecnología.</p>
         <div class="about-container">
             <div class="about-text-container">
-                <h3 class="about-text-title">Un poco de mi historia</h3>
-                <p class="about-text">Soy Leonel, desarrollador frontend y docente de programación. Después de varios años trabajando en áreas administrativas, en 2020 descubrí mi verdadera vocación: la tecnología y el desarrollo de software. Desde entonces me formé de manera continua y hoy me especializo en desarrollo web, programación estructurada y programación orientada a objetos.</p>
-                <p class="about-text">Actualmente trabajo como profesor en un colegio secundario, donde acompaño a jóvenes en sus primeros pasos dentro del mundo de la programación. Disfruto combinar mi experiencia técnica con una mirada pedagógica, buscando siempre transmitir conceptos de forma clara y accesible.</p>
-                <p class="about-text">Como desarrollador frontend, mi objetivo es crear sitios modernos, responsivos y funcionales, pensados para brindar una experiencia intuitiva y profesional. Busco acercar mis servicios a personas, emprendimientos y marcas que quieran mejorar su presencia digital con soluciones sólidas, prolijas y adaptadas a sus necesidades.</p>
+                <h3 class="about-text-title" data-section="about" data-value="subtitle">Un poco de mi historia</h3>
+                <p class="about-text" data-section="about" data-value="p1">Soy Leonel, desarrollador frontend y docente de programación. Después de varios años trabajando en áreas administrativas, en 2020 descubrí mi verdadera vocación: la tecnología y el desarrollo de software. Desde entonces me formé de manera continua y hoy me especializo en desarrollo web, programación estructurada y programación orientada a objetos.</p>
+                <p class="about-text" data-section="about" data-value="p2">Actualmente trabajo como profesor en un colegio secundario, donde acompaño a jóvenes en sus primeros pasos dentro del mundo de la programación. Disfruto combinar mi experiencia técnica con una mirada pedagógica, buscando siempre transmitir los conceptos de forma clara y accesible.</p>
+                <p class="about-text" data-section="about" data-value="p3">Como desarrollador frontend, mi objetivo es crear sitios modernos, responsivos y funcionales, diseñados para ofrecer una experiencia intuitiva y profesional. Busco acercar mis servicios a personas, emprendimientos y marcas que deseen fortalecer su presencia digital con soluciones sólidas, prolijas y adaptadas a sus necesidades.</p>
             </div>
             <div class="skills-container">
-                <h3 class="skills-title">Mis habilidades</h3>
+                <h3 class="skills-title" data-section="about" data-value="skills">Mis habilidades</h3>
                 <div class="skills">
                     <div class="skills-skill">
                         <img class="skill-img" src="./images/html.png" alt="">
