--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
         <div class="card-container">
             <div class="flip flip-vertical">
                 <div class="front">
-                    <h1 class="front-title">Landing Page</h1>
+                    <h1 class="front-title" data-section="services" data-value="card1" data-key="title">Landing Page</h1>
                 </div>
                 <div class="back">
                     <h2 class="back-title">Landing Page</h2>
@@ -196,7 +196,6 @@
                 </div>
                 <div class="back">
                     <h2 class="back-title">Servicios Complementarios</h2>
-                    <!-- <h2 class="back-title">Mantenimiento Web</h2> -->
                     <span class="card-linea"></span>
                     <p class="back-info">Ofrezco mantenimiento, actualización de contenido, rediseño de sitios antiguos, optimización de velocidad, integración con formularios, y conexión con herramientas como Google Analytics o redes sociales.</p>
                     <p class="back-info">Pensado para quienes ya tienen un sitio pero quieren mejorarlo o mantenerlo actualizado sin preocuparse por lo técnico.</p>
