--- a/index.html
+++ b/index.html
@@ -148,99 +148,99 @@
     <!-- Services Section Design -->
 
     <section class="services" id="services">
-        <h2 class="services-title">Servicios</h2>
+        <h2 class="services-title" data-section="services" data-value="title">Servicios</h2>
         <span class="linea"></span>
-        <p class="services-intro">Aca vas a encontrar los servicios que ofrezco para potenciar tu presencia digital. Cada proyecto se adapta a las necesidades del cliente, combinando diseño, funcionalidad y rendimiento para lograr resultados profesionales.</p>
+        <p class="services-intro" data-section="services" data-value="intro">Aca vas a encontrar los servicios que ofrezco para potenciar tu presencia digital. Cada proyecto se adapta a las necesidades del cliente, combinando diseño, funcionalidad y rendimiento para lograr resultados profesionales.</p>
         <div class="card-container">
             <div class="flip flip-vertical">
                 <div class="front">
                     <h1 class="front-title" data-section="services" data-value="card1" data-key="title">Landing Page</h1>
                 </div>
                 <div class="back">
-                    <h2 class="back-title">Landing Page</h2>
+                    <h2 class="back-title" data-section="services" data-value="card1" data-key="title">Landing Page</h2>
                     <span class="card-linea"></span>
-                    <p class="back-info">Una Landing Page es una web de una sola sección diseñada para generar impacto y captar la atención del visitante desde el primer momento.</p>
-                    <p class="back-info">Es ideal para promocionar un producto, servicio o evento, o para crear presencia digital rápida y efectiva.</p>
+                    <p class="back-info" data-section="services" data-value="card1" data-key="p1">Una Landing Page es una web de una sola sección diseñada para generar impacto y captar la atención del visitante desde el primer momento.</p>
+                    <p class="back-info" data-section="services" data-value="card1" data-key="p2">Es ideal para promocionar un producto, servicio o evento, o para crear presencia digital rápida y efectiva.</p>
                     <ul class="back-items">
-                        <li class="item">✔ Diseño responsive</li>
-                        <li class="item">✔ Animaciones suaves y modernas</li>
-                        <li class="item">✔ Optimización básica para SEO</li>
-                        <li class="item">✔ Integración con redes sociales o WhatsApp</li>
-                        <li class="item">✔ Hosting y dominio opcionales</li>
+                        <li class="item" data-section="services" data-value="card1" data-key="li1">✔ Diseño responsive</li>
+                        <li class="item" data-section="services" data-value="card1" data-key="li2">✔ Animaciones suaves y modernas</li>
+                        <li class="item" data-section="services" data-value="card1" data-key="li3">✔ Optimización básica para SEO</li>
+                        <li class="item" data-section="services" data-value="card1" data-key="li4">✔ Integración con redes sociales o WhatsApp</li>
+                        <li class="item" data-section="services" data-value="card1" data-key="li5">✔ Hosting y dominio opcionales</li>
                     </ul>
-                    <p class="back-info">💰 Desde USD 150</p>
-                    <p class="back-info">¿Querés una landing para tu negocio?</p>
-                    <p class="back-info">¿Tenes alguna duda?</p>
-                    <a href="https://wa.me/541134417767?text=Estoy interesado en consultar por una landing page, " target="_blank" class="btn card-button">Hablemos por WhatsApp</a>
+                    <p class="back-info" data-section="services" data-value="card1" data-key="p3">💰 Desde USD 150</p>
+                    <p class="back-info" data-section="services" data-value="card1" data-key="p4">¿Querés una landing para tu negocio?</p>
+                    <p class="back-info" data-section="services" data-value="card1" data-key="p5">¿Tenes alguna duda?</p>
+                    <a href="https://wa.me/541134417767?text=Estoy interesado en consultar por una landing page, " target="_blank" class="btn card-button" data-section="services" data-value="card1" data-key="btn">Hablemos por WhatsApp</a>
                 </div>
             </div>
             <div class="flip flip-vertical">
                 <div class="front">
-                    <h1 class="front-title">Sitio Institucional</h1>
+                    <h1 class="front-title" data-section="services" data-value="card2" data-key="title">Sitio Institucional</h1>
                 </div>
                 <div class="back">
-                    <h2 class="back-title">Sitio Institucional</h2>
+                    <h2 class="back-title" data-section="services" data-value="card2" data-key="title">Sitio Institucional</h2>
                     <span class="card-linea"></span>
-                    <p class="back-info">Un sitio institucional es la carta de presentación digital de tu marca o emprendimiento.</p>
-                    <p class="back-info">Diseño sitios modernos, claros y totalmente adaptables, pensados para reflejar tu identidad profesional, transmitir confianza y destacar lo mejor de tu propuesta.</p>
-                    <p class="back-info">Cada proyecto incluye un diseño personalizado (sin plantillas prediseñadas), optimización SEO básica, formularios funcionales y asistencia con dominio y hosting para dejar tu sitio 100% online, visible y listo para crecer.</p>
-                    <p class="back-info">💰 Desde USD 250</p>
-                    <p class="back-info">¿Querés mejorar la presencia digital de tu marca?</p>
-                    <p class="back-info">Escribime y te asesoro sin compromiso</p>
-                    <a href="https://wa.me/541134417767?text=" target="_blank" class="btn card-button">Hablemos por WhatsApp</a>
+                    <p class="back-info" data-section="services" data-value="card2" data-key="p1">Un sitio institucional es la carta de presentación digital de tu marca o emprendimiento.</p>
+                    <p class="back-info" data-section="services" data-value="card2" data-key="p2">Diseño sitios modernos, claros y totalmente adaptables, pensados para reflejar tu identidad profesional, transmitir confianza y destacar lo mejor de tu propuesta.</p>
+                    <p class="back-info" data-section="services" data-value="card2" data-key="p3">Cada proyecto incluye un diseño personalizado (sin plantillas prediseñadas), optimización SEO básica, formularios funcionales y asistencia con dominio y hosting para dejar tu sitio 100% online, visible y listo para crecer.</p>
+                    <p class="back-info" data-section="services" data-value="card2" data-key="p4">💰 Desde USD 250</p>
+                    <p class="back-info" data-section="services" data-value="card2" data-key="p5">¿Querés mejorar la presencia digital de tu marca?</p>
+                    <p class="back-info" data-section="services" data-value="card2" data-key="p6">Escribime y te asesoro sin compromiso</p>
+                    <a href="https://wa.me/541134417767?text=" target="_blank" class="btn card-button" data-section="services" data-value="card2" data-key="btn">Hablemos por WhatsApp</a>
                 </div>
             </div>
             <div class="flip flip-vertical">
                 <div class="front">
-                    <h1 class="front-title">Servicios Complementarios</h1>
+                    <h1 class="front-title" data-section="services" data-value="card3" data-key="title">Servicios Complementarios</h1>
                 </div>
                 <div class="back">
-                    <h2 class="back-title">Servicios Complementarios</h2>
+                    <h2 class="back-title" data-section="services" data-value="card3" data-key="title">Servicios Complementarios</h2>
                     <span class="card-linea"></span>
-                    <p class="back-info">Ofrezco mantenimiento, actualización de contenido, rediseño de sitios antiguos, optimización de velocidad, integración con formularios, y conexión con herramientas como Google Analytics o redes sociales.</p>
-                    <p class="back-info">Pensado para quienes ya tienen un sitio pero quieren mejorarlo o mantenerlo actualizado sin preocuparse por lo técnico.</p>
-                    <p class="back-info">💰 Desde USD 40 por servicio puntual</p>
-                    <p class="back-info">¿Queres mejorar tu web?</p>
-                    <p class="back-info">Contame qué necesitás y te asesoro sin compromiso.</p>
-                    <a href="https://wa.me/541134417767?text=" target="_blank" class="btn card-button">Hablemos por WhatsApp</a>
+                    <p class="back-info" data-section="services" data-value="card3" data-key="p1">Ofrezco mantenimiento, actualización de contenido, rediseño de sitios antiguos, optimización de velocidad, integración con formularios, y conexión con herramientas como Google Analytics o redes sociales.</p>
+                    <p class="back-info" data-section="services" data-value="card3" data-key="p2">Pensado para quienes ya tienen un sitio pero quieren mejorarlo o mantenerlo actualizado sin preocuparse por lo técnico.</p>
+                    <p class="back-info" data-section="services" data-value="card3" data-key="p3">💰 Desde USD 40 por servicio puntual</p>
+                    <p class="back-info" data-section="services" data-value="card3" data-key="p4">¿Querés mejorar tu web?</p>
+                    <p class="back-info" data-section="services" data-value="card3" data-key="p5">Contame qué necesitás y te asesoro sin compromiso.</p>
+                    <a href="https://wa.me/541134417767?text=" target="_blank" class="btn card-button" data-section="services" data-value="card3" data-key="btn">Hablemos por WhatsApp</a>
                 </div>
             </div>
         </div>
 
         <div class="accordion-container">
-            <h3 class="accordion-title">Cómo trabajo</h3>
+            <h3 class="accordion-title" data-section="services" data-value="accordion" data-key="title">Cómo trabajo</h3>
             <span class="accordion-line"></span>
-            <p class="accordion-intro">En esta parte te cuento cómo organizo cada proyecto: desde la modalidad de trabajo y las formas de pago, hasta la revisión final y la entrega del sitio publicado. Busco que cada etapa sea clara y sencilla, para que el resultado refleje exactamente lo que necesitás.</p>
+            <p class="accordion-intro" data-section="services" data-value="accordion" data-key="intro">En esta parte te cuento cómo organizo cada proyecto: desde la modalidad de trabajo y las formas de pago, hasta la revisión final y la entrega del sitio publicado. Busco que cada etapa sea clara y sencilla, para que el resultado refleje exactamente lo que necesitás.</p>
             <div class="accordion">
                 <div class="accordion-item">
-                    <div class="accordion-header">1. ⚙️ Modalidad de trabajo<span>+</span></div>
+                    <div class="accordion-header" data-section="services" data-value="accordion" data-key="header1">1. ⚙️ Modalidad de trabajo<span>+</span></div>
                     <div class="accordion-content">
-                        <p>Cada proyecto se realiza de forma personalizada, adaptado a las necesidades y objetivos del cliente. Antes de comenzar, se define el alcance, el contenido y los plazos de entrega.</p>
+                        <p data-section="services" data-value="accordion" data-key="p1" >Cada proyecto se realiza de forma personalizada, adaptado a las necesidades y objetivos del cliente. Antes de comenzar, se define el alcance, el contenido y los plazos de entrega.</p>
                     </div>
                 </div>
                 <div class="accordion-item">
-                    <div class="accordion-header">2. 💳 Formas de pago <span>+</span></div>
+                    <div class="accordion-header" data-section="services" data-value="accordion" data-key="header2">2. 💳 Formas de pago <span>+</span></div>
                     <div class="accordion-content">
-                        <p>El trabajo se realiza bajo la modalidad 50% por adelantado y 50% al finalizar el proyecto, antes de la publicación o entrega de los archivos finales.</p>
-                        <p>Los pagos pueden realizarse en pesos argentinos (ARS) al tipo de cambio del día, o en dólares (USD) mediante los medios acordados (Transferencia / Mercado Pago)</p>
+                        <p data-section="services" data-value="accordion" data-key="p2">El trabajo se realiza bajo la modalidad 50% por adelantado y 50% al finalizar el proyecto, antes de la publicación o entrega de los archivos finales.</p>
+                        <p data-section="services" data-value="accordion" data-key="p3">Los pagos pueden realizarse en pesos argentinos (ARS) al tipo de cambio del día, o en dólares (USD) mediante los medios acordados (Transferencia / Mercado Pago)</p>
                     </div>
                 </div>
                 <div class="accordion-item">
-                    <div class="accordion-header">3. 🛠️ Revisión y ajustes<span>+</span></div>
+                    <div class="accordion-header" data-section="services" data-value="accordion" data-key="header3">3. 🛠️ Revisión y ajustes<span>+</span></div>
                     <div class="accordion-content">
-                        <p>Se incluyen una o dos rondas de ajustes menores (según el tipo de servicio) una vez presentado el diseño o la versión funcional del sitio. Cambios fuera del alcance inicial pueden presupuestarse aparte.</p>
+                        <p data-section="services" data-value="accordion" data-key="p4">Se incluyen una o dos rondas de ajustes menores (según el tipo de servicio) una vez presentado el diseño o la versión funcional del sitio. Cambios fuera del alcance inicial pueden presupuestarse aparte.</p>
                     </div>
                 </div>
                 <div class="accordion-item">
-                    <div class="accordion-header">4. 🌐 Hosting y dominio<span>+</span></div>
+                    <div class="accordion-header" data-section="services" data-value="accordion" data-key="header4">4. 🌐 Hosting y dominio<span>+</span></div>
                     <div class="accordion-content">
-                        <p>El servicio de hosting y dominio puede gestionarse a través del desarrollador o directamente por el cliente. Si el hosting lo provee el desarrollador, se cobrará el costo correspondiente al plan elegido.</p>
+                        <p data-section="services" data-value="accordion" data-key="p5">El servicio de hosting y dominio puede gestionarse a través del desarrollador o directamente por el cliente. Si el hosting lo provee el desarrollador, se cobrará el costo correspondiente al plan elegido.</p>
                     </div>
                 </div>
                 <div class="accordion-item">
-                    <div class="accordion-header">5. 🚀 Entrega final<span>+</span></div>
+                    <div class="accordion-header" data-section="services" data-value="accordion" data-key="header5">5. 🚀 Entrega final<span>+</span></div>
                     <div class="accordion-content">
-                        <p>La entrega final se realiza una vez abonado el total del proyecto. En caso de hosting propio del cliente, se entregan los archivos listos para subir. Si se contrata hosting administrado, el sitio se publica directamente.</p>
+                        <p data-section="services" data-value="accordion" data-key="p6">La entrega final se realiza una vez abonado el total del proyecto. En caso de hosting propio del cliente, se entregan los archivos listos para subir. Si se contrata hosting administrado, el sitio se publica directamente.</p>
                     </div>
                 </div>
             </div>
